--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@angular/router": "^13.2.0",
     "rxjs": "^7.5.2",
     "tslib": "^2.3.1",
-    "zone.js": "^0.11.4"
+    "zone.js": "^0.11.4",
+    "oidc-client-ts": "^2.0.3"
   },
   "scripts": {
     "ng": "ng",
