--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.2.0",
-    "@angular/common": "^13.2.0",
-    "@angular/compiler": "^13.2.0",
-    "@angular/core": "^13.2.0",
-    "@angular/forms": "^13.2.0",
-    "@angular/platform-browser": "^13.2.0",
-    "@angular/platform-browser-dynamic": "^13.2.0",
-    "@angular/router": "^13.2.0",
-    "rxjs": "^7.5.2",
+    "@angular/animations": "^13.3.2",
+    "@angular/common": "^13.3.2",
+    "@angular/compiler": "^13.3.2",
+    "@angular/core": "^13.3.2",
+    "@angular/forms": "^13.3.2",
+    "@angular/platform-browser": "^13.3.2",
+    "@angular/platform-browser-dynamic": "^13.3.2",
+    "@angular/router": "^13.3.2",
+    "oidc-client-ts": "^2.0.3",
+    "rxjs": "^7.5.5",
     "tslib": "^2.3.1",
-    "zone.js": "^0.11.4",
-    "oidc-client-ts": "^2.0.3"
+    "zone.js": "^0.11.5"
   },
   "scripts": {
     "ng": "ng",
